--- a/blocs/feynman/feynman.css
+++ b/blocs/feynman/feynman.css
@@ -2,7 +2,7 @@
   display: flex;
   position: relative;
   background-color: #f2f2f2;
-  background-image: url(/images/feynman.png);
+  background-image: url(../../images/feynman.png);
   background-repeat: no-repeat;
   background-size: 867px 637px;
   background-position: bottom 0 left 0;
