--- a/blocs/kaufman/__triangle/kaufman__triangle.css
+++ b/blocs/kaufman/__triangle/kaufman__triangle.css
@@ -1,5 +1,5 @@
 .kaufman__triangle {
-  background-image: url(/images/kaufman-triangle.svg);
+  background-image: url(../../../images/kaufman-triangle.svg);
   background-position: center;
   background-size: cover;
   height: 877px;
