--- a/blocs/video/__frame/video__frame.css
+++ b/blocs/video/__frame/video__frame.css
@@ -1,9 +1,11 @@
 .video__iframe {
   width: 515px;
   height: 316px;
+  margin-right: 20px;
   transform: translateY(50px);
+  border: none;
 }
 
-.video__iframe:first-child {
-  margin-right: 20px;
+.video__iframe:nth-of-type(2n) {
+  margin-right: 0;
 }
