--- a/blocs/video/__frames/video__frames.css
+++ b/blocs/video/__frames/video__frames.css
@@ -1,4 +1,6 @@
 .video__iframes {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+  align-content: flex-start;
 }
